# lincity-ng

./: .gitignore  README.md  config_meson.h.in  meson.build
src/gui/: Button.cpp  Button.hpp  Child.cpp  Child.hpp  Color.cpp  Color.hpp  Component.cpp  Component.hpp  ComponentFactory.cpp  ComponentFactory.hpp  ComponentLoader.cpp  ComponentLoader.hpp  Desktop.cpp  Desktop.hpp  Document.cpp  Document.hpp  DocumentElement.hpp  DocumentImage.cpp  DocumentImage.hpp  Event.cpp  Event.hpp  FilledRectangle.cpp  FilledRectangle.hpp  Filter.cpp  Filter.hpp  FontManager.cpp  FontManager.hpp  Gradient.cpp  Gradient.hpp  Image.cpp  Image.hpp  Painter.hpp  Panel.cpp  Panel.hpp  Paragraph.cpp  Paragraph.hpp  Rect2D.cpp  Rect2D.hpp  ScrollBar.cpp  ScrollBar.hpp  (+18 more)
src/gui/PainterGL/: PainterGL.cpp  PainterGL.hpp  TextureGL.cpp  TextureGL.hpp  TextureManagerGL.cpp  TextureManagerGL.hpp
src/gui/PainterSDL/: PainterSDL.cpp  PainterSDL.hpp  TextureManagerSDL.cpp  TextureManagerSDL.hpp  TextureSDL.cpp  TextureSDL.hpp
src/gui/callback/: Callback.hpp  CallbackBase.hpp  Signal.hpp
src/lincity/: fileutil.cpp  lcconfig.h
src/lincity-ng/: ButtonPanel.hpp  CheckButton.hpp  Config.hpp  Debug.hpp  Dialog.hpp  EconomyGraph.hpp  ErrorInterface.hpp  HelpWindow.hpp  MainLincity.hpp  MainMenu.hpp  MapEdit.hpp  MapPoint.hpp  main.cpp  main.hpp
src/lincity/modules/: track_road_rail.h
src/tinygettext/: findlocale.cpp  tinygettext.cpp
